--- a/css/style.css
+++ b/css/style.css
@@ -1268,6 +1268,9 @@ template {
   .title_fz48 {
     font-size: 28px;
   }
+  .promo {
+    background: url("../../img/main_bg.jpg") no-repeat 50%/cover;
+  }
   .promo__title {
     line-height: 39px;
     width: 300px;
