--- a/css/style.css
+++ b/css/style.css
@@ -344,7 +344,7 @@ template {
 .promo {
   min-height: 100vh;
   position: relative;
-  background: url("../../img/main_bg.jpg") no-repeat 50%/cover;
+  background: url("./../img/main_bg.jpg") no-repeat 50%/cover;
   padding-top: 205px;
 }
 
