--- a/sass/blocks/_contacts.scss
+++ b/sass/blocks/_contacts.scss
@@ -94,8 +94,11 @@
 	}
 
    &__email {
-      text-decoration: none;
+		text-decoration: none;
       color: #000000;
+      a {
+			color: #000000;
+		}
       &:hover {
          text-decoration: none; 
          color: $main-color;
